--- a/themes/gron/layouts/partials/meta_head.html
+++ b/themes/gron/layouts/partials/meta_head.html
@@ -52,7 +52,8 @@
 {{- end -}}
 
 <!-- MathJax support -->
-{{- if isset .Params "mathjax" | and (eq (.Param "mathjax") true) }}
+
+<!--{{- if isset .Params "mathjax" | and (eq (.Param "mathjax") true) }}
 <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {
@@ -80,4 +81,35 @@
         });
 </script>
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+{{ end }} -->
+
+<!-- MathJax support -->
+{{- if isset .Params "mathjax" | and (eq (.Param "mathjax") true) }}
+<script>
+window.MathJax = {
+  tex: {
+    inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+    displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+    processEscapes: true,
+    tagSide: "right",
+    tagIndent: '1rem',
+    multlineWidth: "85%",
+    tags: "ams"
+  },
+  options: {
+    skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+  },
+  chtml: {
+    scale: 0.9
+  },
+  svg: {
+    fontCache: 'global',        // or 'local' or 'none'
+    scale: 0.9,                // global scaling factor for all expressions
+  }
+};
+</script>
+<script id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+</script>
+
 {{ end }}
