--- a/themes/gron/layouts/partials/meta_head.html
+++ b/themes/gron/layouts/partials/meta_head.html
@@ -109,7 +109,7 @@ window.MathJax = {
 };
 </script>
 <script id="MathJax-script" async
-  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 </script>
 
 {{ end }}
