--- a/themes/gron/layouts/partials/meta_head.html
+++ b/themes/gron/layouts/partials/meta_head.html
@@ -52,8 +52,7 @@
 {{- end -}}
 
 <!-- MathJax support -->
-
-<!--{{- if isset .Params "mathjax" | and (eq (.Param "mathjax") true) }}
+{{- if isset .Params "mathjax" | and (eq (.Param "mathjax") true) }}
 <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             tex2jax: {
@@ -80,11 +79,11 @@
             messageStyle: "none"
         });
 </script>
-<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
-{{ end }} -->
+<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-AMS_CHTML' async></script>
+{{ end }}
 
 <!-- MathJax support -->
-{{- if isset .Params "mathjax" | and (eq (.Param "mathjax") true) }}
+<!--{{- if isset .Params "mathjax" | and (eq (.Param "mathjax") true) }}
 <script>
 window.MathJax = {
   tex: {
@@ -113,3 +112,4 @@ window.MathJax = {
 </script>
 
 {{ end }}
+-->
