--- a/themes/gron/layouts/shortcodes/includevideo.html
+++ b/themes/gron/layouts/shortcodes/includevideo.html
@@ -8,10 +8,10 @@
 
   {{ if isset .Params "caption" }}
   {{/* NOTE(agronskiy) We must utilize a newlines inside figcaption to process it as
-        Markdown due to specs */}}
+        Markdown outside */}}
   <figcaption class="imgcaption font-italic mt-1" markdown="span">
 
-{{ .Get "caption" }}
+{{ .Get "caption" | markdownify }}
 
   </figcaption>
   {{ end }}
