--- a/themes/gron/layouts/partials/footer.html
+++ b/themes/gron/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
-    <p>&copy; Alexey Gronskiy, 2017-{{ now.Format "2006"}}</p>
+    <p>&copy; Alexey Gronskiy, 2017-{{ now.Format "2006"}}, built with <a href="https://gohugo.io">Hugo</a></p>
     <!--<p><i class="small">Uses Google Analytics</i></p>-->
 </footer>
