--- a/scss/custom_highlight_hljs.scss
+++ b/scss/custom_highlight_hljs.scss
@@ -5,7 +5,7 @@ code {
     border-width: .5px;
     background-color: $custom-code-bg-color;
     border-color: $custom-code-border-color;
-    padding: 10% 20%;
+    padding: 0;
 
     border-radius: 4px;
     -webkit-border-radius: 4px;
